8226825: Replace wildcard address with loopback or local host in tests - part 19
Replace use of wildcard by the loopback address, or possibly the local host address, wherever possible, to improve test stability.

Reviewed-by: chegar, bpb